--- a/TodoListApp/index.html
+++ b/TodoListApp/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List App </title>
-    <link rel="stylesheets" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="todo-container">
         <h1>My Todo List</h1>
-        <div id="todo-input">
-            <input type="text"placeholder="Add New Task">
+        <div id="todo-group">
+            <input type="text" id="todo-input"placeholder="Add New Task">
             <button id="add-btn">Add</button>
         </div>
-        <ul id="todo-list"></ul>
-        <script src="ex.js" type="text\js"></script>
+        <ul id="todo-list">
+        </ul>
     </div>
+    <script type=" text/javascript" src="ex.js" ></script>
 </body>
 </html>
